# redis

./: .gitignore  CMakeLists.txt  README.md  note_after_comment.md
conf/: nodes-6380.conf  nodes.conf  redis-6380.conf  redis-slave.conf  redis.conf  sentinel-26379.conf  sentinel-26380.conf  sentinel-26381.conf
src/: Makefile  ae.c  ae.h  ae_epoll.c  ae_evport.c  ae_select.c  anet.c  blocked.c  cluster.c  config.c  db.c  dict.c  multi.c  networking.c  pubsub.c  replication.c  sentinel.c  server.c  server.h  t_zset.c  ziplist.c
